--- a/web/css/animation.css
+++ b/web/css/animation.css
@@ -21,40 +21,40 @@
 }
 
 .pi1{
-	background:url(http://pic.rzx.me/rzxme/web/images/anim.jpg) no-repeat 0 0;
+	background:url(../images/anim.jpg) no-repeat 0 0;
 }
 .pi1:hover{
-	background:url(http://pic.rzx.me/rzxme/web/images/anim.jpg) no-repeat 0 -360px;
+	background:url(../images/anim.jpg) no-repeat 0 -360px;
 }
 .pi1:active{
-	background:url(http://pic.rzx.me/rzxme/web/images/anim.jpg) no-repeat 0 -720px;
+	background:url(../images/anim.jpg) no-repeat 0 -720px;
 }
 .pi2{
-	background:url(http://pic.rzx.me/rzxme/web/images/anim.jpg) no-repeat -200px 0;
+	background:url(../images/anim.jpg) no-repeat -200px 0;
 }
 .pi2:hover{
-	background:url(http://pic.rzx.me/rzxme/web/images/anim.jpg) no-repeat -200px -360px;
+	background:url(../images/anim.jpg) no-repeat -200px -360px;
 }
 .pi2:active{
-	background:url(http://pic.rzx.me/rzxme/web/images/anim.jpg) no-repeat -200px -720px;
+	background:url(../images/anim.jpg) no-repeat -200px -720px;
 }
 .pi3{
-	background:url(http://pic.rzx.me/rzxme/web/images/anim.jpg) no-repeat -400px 0;
+	background:url(../images/anim.jpg) no-repeat -400px 0;
 }
 .pi3:hover{
-	background:url(http://pic.rzx.me/rzxme/web/images/anim.jpg) no-repeat -400px -360px;
+	background:url(../images/anim.jpg) no-repeat -400px -360px;
 }
 .pi3:active{
-	background:url(http://pic.rzx.me/rzxme/web/images/anim.jpg) no-repeat -400px -720px;
+	background:url(../images/anim.jpg) no-repeat -400px -720px;
 }
 .pi4{
-	background:url(http://pic.rzx.me/rzxme/web/images/anim.jpg) no-repeat -600px 0;
+	background:url(../images/anim.jpg) no-repeat -600px 0;
 }
 .pi4:hover{
-	background:url(http://pic.rzx.me/rzxme/web/images/anim.jpg) no-repeat -600px -360px;
+	background:url(../images/anim.jpg) no-repeat -600px -360px;
 }
 .pi4:active{
-	background:url(http://pic.rzx.me/rzxme/web/images/anim.jpg) no-repeat -600px -720px;
+	background:url(../images/anim.jpg) no-repeat -600px -720px;
 }
 
 
@@ -68,14 +68,14 @@
 	margin:0 auto;
 }
 .video-x{
-	background:url(http://pic.rzx.me/rzxme/web/images/grid-loading.gif) no-repeat center center;
+	background:url(../images/grid-loading.gif) no-repeat center center;
 	width:356px;
 	height:233px;
 	float:left;
 	margin:10px 30px;
 }
 .video-y{
-	background:url(http://pic.rzx.me/rzxme/web/images/grid-loading.gif) no-repeat center center;
+	background:url(../images/grid-loading.gif) no-repeat center center;
 	width:260px;
 	float:left;
 	margin:10px 10px;
