--- a/web/css/comic.css
+++ b/web/css/comic.css
@@ -6,13 +6,13 @@
 	text-align:center;
 }
 .comic_dog{
-	background:url(http://pic.rzx.me/rzxme/web/images/dog.jpg) no-repeat 0 0;
+	background:url(../images/dog.jpg) no-repeat 0 0;
 	width:300px;
 	height:300px;
 	margin:0 auto;
 }
 .comic_dog:hover{
-	background:url(http://pic.rzx.me/rzxme/web/images/dog.jpg) no-repeat 0 -300px;
+	background:url(../images/dog.jpg) no-repeat 0 -300px;
 	width:300px;
 	height:300px;
 	margin:0 auto;
@@ -29,34 +29,34 @@
 	float:left;
 }
 .c1{
-	background:url(http://pic.rzx.me/rzxme/web/images/comic-pic.jpg) no-repeat 0 0;
+	background:url(../images/comic-pic.jpg) no-repeat 0 0;
 }
 .c1:hover{
-	background:url(http://pic.rzx.me/rzxme/web/images/comic-pic.jpg) no-repeat 0 -60px;
+	background:url(../images/comic-pic.jpg) no-repeat 0 -60px;
 }
 .c1:active{
 }
 .c2{
-	background:url(http://pic.rzx.me/rzxme/web/images/comic-pic.jpg) no-repeat -60px 0;
+	background:url(../images/comic-pic.jpg) no-repeat -60px 0;
 }
 .c2:hover{
-	background:url(http://pic.rzx.me/rzxme/web/images/comic-pic.jpg) no-repeat -60px -60px;
+	background:url(../images/comic-pic.jpg) no-repeat -60px -60px;
 }
 .c2:active{
 }
 .c3{
-	background:url(http://pic.rzx.me/rzxme/web/images/comic-pic.jpg) no-repeat -120px 0;
+	background:url(../images/comic-pic.jpg) no-repeat -120px 0;
 }
 .c3:hover{
-	background:url(http://pic.rzx.me/rzxme/web/images/comic-pic.jpg) no-repeat -120px -60px;
+	background:url(../images/comic-pic.jpg) no-repeat -120px -60px;
 }
 .c3:active{
 }
 .c4{
-	background:url(http://pic.rzx.me/rzxme/web/images/comic-pic.jpg) no-repeat -180px 0;
+	background:url(../images/comic-pic.jpg) no-repeat -180px 0;
 }
 .c4:hover{
-	background:url(http://pic.rzx.me/rzxme/web/images/comic-pic.jpg) no-repeat -180px -60px;
+	background:url(../images/comic-pic.jpg) no-repeat -180px -60px;
 }
 .c4:active{
 }
