--- a/web/css/contact.css
+++ b/web/css/contact.css
@@ -8,29 +8,40 @@ body {
 .center{
 	width:500px;
 	margin:0 auto;
+	display:flex;
+	flex-direction:column;
+	align-items:center;
 }
 .c-table{
 	margin:430px 0 0 0;
 	text-align:center;
+	width:100%;
 }
 .center-pic{
+	display:flex;
+	justify-content:center;
+	align-items:center;
+	gap:12px;
+	margin:12px 0;
 }
 .email{
-	background:url(../images/email.jpg);
+	background:url(../images/email.jpg) no-repeat center;
 	height:36px;
-	margin:0 auto;
+	width:320px;
+	margin:0 auto 16px;
+	display:block;
 }
 
 .email:hover{
-	background:url(../images/email.jpg) no-repeat 0 -36px;
+	background:url(../images/email.jpg) no-repeat center -36px;
 	height:36px;
-	margin:0 auto;
+	width:320px;
+	margin:0 auto 16px;
 }
 .follow1,.follow2,.follow3,.follow4{
 	width:50px;
 	height:50px;
-	margin:10px 10px;
-	float:left;
+	margin:0;
 	overflow:hidden;
 }
 .follow1{
