--- a/web/css/contact.css
+++ b/web/css/contact.css
@@ -25,17 +25,17 @@ body {
 	margin:12px 0;
 }
 .email{
-	background:url(../images/email.jpg) no-repeat center;
+	background:url(../images/email.jpg) no-repeat 0 0;
 	height:36px;
-	width:320px;
+	width:500px;
 	margin:0 auto 16px;
 	display:block;
 }
 
 .email:hover{
-	background:url(../images/email.jpg) no-repeat center -36px;
+	background:url(../images/email.jpg) no-repeat 0 -36px;
 	height:36px;
-	width:320px;
+	width:500px;
 	margin:0 auto 16px;
 }
 .follow1,.follow2,.follow3,.follow4{
